@@ -13,7 +13,7 @@ public class Stairs extends GameEntity {
 	public Stairs(Pair<Integer, Integer> position) throws SlickException {
 		//IMMAGINE TEMPORANEA
 		super(position, Optional.empty(), Optional.of(Entities.STAIR));
-		this.setTexture(new Image("./res/walls/old/Old_Hor_Wall.png"));
+		this.setTexture(new Image("./res/floor/stairs.png"));
 	}
 
 }
