@@ -10,6 +10,6 @@ public interface Health {
 
 	public int getMaxHealth();
 	
-	public int upgradeHealth(int upgrade);
+	public void upgradeHealth(int upgrade);
 
 }
